# o-my-debrief

./: .gitignore  BEADS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
config/: milestone-rules.yaml
docs/: FLIGHT-INDICATORS.md  GROK-TASKS.md  MILESTONE-CLASSIFIER.md  OMY-SIM-INTEGRATION.md
features/: o-my-debrief.feature
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: AltitudeProfile.svelte  FlightInstruments.svelte  Milestones.svelte  MissionMap.svelte  Timeline.svelte  VehicleStatus.svelte  api.js
openspec/: WORKFLOW.md  config.yaml  project.md
openspec/changes/add-classifier-track-summary/: design.md  proposal.md  tasks.md  verification.md
openspec/changes/add-classifier-track-summary/specs/o-my-debrief/: spec.md
openspec/specs/o-my-debrief/: spec.md
scripts/: capture-screenshots.mjs
src/omy_debrief/: __init__.py  store.py
src/omy_debrief/api/: app.py
src/omy_debrief/demo/: __init__.py  generate.py
src/omy_debrief/models/: __init__.py  events.py
src/omy_debrief/recorder/: __init__.py  cli.py
tests/: test_api.py  test_recorder.py
