[project]
name = "omy-debrief"
version = "0.1.0"
description = "Platform Debrief for Open Arsenal o-my OMS — capture, query, and visualize mission milestones"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pyarrow>=17.0.0",
    "python-dateutil>=2.9.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
omy-debrief-demo = "omy_debrief.demo.generate:main"
omy-debrief-recorder = "omy_debrief.recorder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omy_debrief"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
